<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="MAIN" Id="{8749f6d4-9eb1-4455-8c08-9154e8b5dfe0}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	stWorker_1		: ST_WORKER_VARIABLES;
	stRecipe		: ST_RECIPE_VARIABLES;
	
	// Slave positions for the cam table
	// Array [1..4] are slaves 1 - 4, each of the slave is a 2d array **REQUIRED by cam table ref**
	// Array [0..359] are master-slave position pair
	ALL_CAM			: ARRAY [1..4] OF ARRAY [0..359] OF ARRAY [0..1] OF LREAL;		
	ALL_CAM_REF		: ARRAY [1..4] OF MC_CAM_REF;		// Cam table reference
	
	nState			: INT;
	bStart			: BOOL;
	
	fbMasterCam		: FB_MasterCamControl;
	fbCamProfiles	: FB_CamProfiles;
	mcHome			: MC_Home;
	bMasterRun		: BOOL;
	bHalt			: BOOL;
	bReset			: BOOL;
	bReadDone		: BOOL;
	bCreateDone		: BOOL;
	
	bCamIn			: BOOL;
	nUpdate			: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbMasterCam();

CASE nState OF
	0:	// IDLE
		IF bStart THEN
			nState		:= 5;
		END_IF
	5:	// Initialize and enable the power on Master and Slaves Axes
		fbMasterCam.mInitialize(TRUE);
		IF fbMasterCam.pInitialized THEN
			fbMasterCam.mInitialize(FALSE);
			nState		:= 10;
		END_IF
	(**************** These will not be implemented in the real project ***********)
	(**************** recipe management will replace the csv file *****************)
	10:	// Read CAM profiles from CSV files and store in CAM arrays
		fbCamProfiles.mReadAndStoreSlavePositions(TRUE, ALL_CAM);
		IF fbCamProfiles.pReadDone THEN
			fbCamProfiles.mReadAndStoreSlavePositions(FALSE, ALL_CAM);
			nState		:= 15;
		END_IF
	15:	// Create Twincat digital CAM tables from CAM profile arrays
		fbCamProfiles.mCreateCamProfiles(TRUE, ALL_CAM, ALL_CAM_REF);
		IF fbCamProfiles.pCreateDone THEN
			fbCamProfiles.mCreateCamProfiles(FALSE, ALL_CAM, ALL_CAM_REF);
			GVL.rMasterVel:= 0.5;			// Start Master at minimum speed
			bMasterRun	:= TRUE;			// to couple CAM profiles
			fbMasterCam.pRunCams:= TRUE;	// Start Slaves
			nState		:= 20;
		END_IF
	(**************      ~30s to complete the csv reading     *********************)
	(******************************************************************************)
	20:	// Assign CAM tables to their respective Slave Axes
		fbMasterCam.mMultiCamIn(TRUE);
		IF fbMasterCam.pCamInDone THEN
			fbMasterCam.mMultiCamIn(TRUE);
			nState		:= 25;
		END_IF
	25:	// Speed up Master after all CAMs done coupling 
		IF NOT bMasterRun THEN
			GVL.rMasterVel	:= 50;
			bMasterRun		:= TRUE;
			nState			:= 26;
		END_IF
		
	(********************* Not used *******************)
	30:	// Stop all axes
		fbMasterCam.mHalt(bHalt);
	35: // Reset all axes
		fbMasterCam.mReset(bReset);
END_CASE
fbMasterCam.mRun(bMasterRun);]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="239" Count="0" />
      <LineId Id="371" Count="0" />
      <LineId Id="183" Count="1" />
      <LineId Id="186" Count="0" />
      <LineId Id="188" Count="2" />
      <LineId Id="202" Count="0" />
      <LineId Id="199" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="401" Count="0" />
      <LineId Id="403" Count="0" />
      <LineId Id="204" Count="0" />
      <LineId Id="208" Count="2" />
      <LineId Id="212" Count="0" />
      <LineId Id="211" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="215" Count="1" />
      <LineId Id="316" Count="0" />
      <LineId Id="340" Count="0" />
      <LineId Id="289" Count="0" />
      <LineId Id="217" Count="0" />
      <LineId Id="205" Count="0" />
      <LineId Id="404" Count="0" />
      <LineId Id="402" Count="0" />
      <LineId Id="218" Count="0" />
      <LineId Id="312" Count="3" />
      <LineId Id="222" Count="0" />
      <LineId Id="225" Count="0" />
      <LineId Id="345" Count="0" />
      <LineId Id="336" Count="0" />
      <LineId Id="341" Count="1" />
      <LineId Id="346" Count="0" />
      <LineId Id="396" Count="1" />
      <LineId Id="227" Count="1" />
      <LineId Id="224" Count="0" />
      <LineId Id="229" Count="0" />
      <LineId Id="185" Count="0" />
      <LineId Id="76" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>